--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         	<img src="image/logo.png" />
         </div>
         <ul>
-            <li class="active"><a href="#">首页</a></li>
-            <li><a href="#">品牌介绍</a></li>
-            <li><a href="#">产品介绍</a></li>
-            <li><a href="#">招商加盟</a></li>
-            <li><a href="#">新闻动态</a></li>
+            <li class="active"><a href="https://zyx230107.github.io/sy/">首页</a></li>
+            <li><a href="https://zhujingle2.github.io/brand/">品牌介绍</a></li>
+            <li><a href="https://zhujingle2.github.io/product-induction/">产品介绍</a></li>
+            <li><a href="https://zengqiuyun.github.io/zsjm/">招商加盟</a></li>
+            <li><a href="https://zengqiuyun.github.io/kwtt/">新闻动态</a></li>
             <li><a href="https://zyx230107.github.io/lxwm2/">联系我们</a></li>
         </ul>
         <div class="dianhua">
@@ -120,7 +120,7 @@
                 </div>
                 <div class="text">
                 	<h3>芒个不停</h3>
-                    <div class="an"><a href="#">more</a></div>
+                    <div class="an"><a href="https://zhujingle2.github.io/product-induction/">more</a></div>
                 </div>
             </div>
             <div class="aa">
@@ -129,7 +129,7 @@
                 </div>
                 <div class="text">
                 	<h3>北海道流心蛋糕</h3>
-                    <div class="an"><a href="#">more</a></div>
+                    <div class="an"><a href="https://zhujingle2.github.io/product-induction/">more</a></div>
                 </div>
             </div>
             <div class="aa">
@@ -138,7 +138,7 @@
                 </div>
                 <div class="text">
                 	<h3>包草莓肉松小贝</h3>
-                    <div class="an"><a href="#">more</a></div>
+                    <div class="an"><a href="https://zhujingle2.github.io/product-induction/">more</a></div>
                 </div>
             </div>
             <div class="aa">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="text">
                 	<h3>朗姆提子棒棒</h3>
-                    <div class="an"><a href="#">more</a></div>
+                    <div class="an"><a href="https://zhujingle2.github.io/product-induction/">more</a></div>
                 </div>
             </div>
             <div class="aa">
@@ -156,7 +156,7 @@
                 </div>
                 <div class="text">
                 	<h3>热姜拿铁</h3>
-                    <div class="an"><a href="#">more</a></div>
+                    <div class="an"><a href="https://zhujingle2.github.io/product-induction/">more</a></div>
                 </div>
             </div>
             <div class="aa">
@@ -165,7 +165,7 @@
                 </div>
                 <div class="text">
                 	<h3>抹茶红豆小蛋糕</h3>
-                    <div class="an"><a href="#">more</a></div>
+                    <div class="an"><a href="https://zhujingle2.github.io/product-induction/">more</a></div>
                 </div>
             </div>
             <div class="aa">
@@ -174,7 +174,7 @@
                 </div>
                 <div class="text">
                 	<h3>芒个不停</h3>
-                    <div class="an"><a href="#">more</a></div>
+                    <div class="an"><a href="https://zhujingle2.github.io/product-induction/">more</a></div>
                 </div>
             </div>
         </div>
@@ -183,35 +183,35 @@
     <div class="news">
     	<div class="box3">
             <p>卡吻头条<span>CAFVIN HEADLINES</span></p>
-            <div class="more2"><a href="#">more</a></div>
+            <div class="more2"><a href="https://zengqiuyun.github.io/kwtt/">more</a></div>
         </div>
         <div class="tp">
         	<img src="image/news1.png" />
         </div>
         <div class="tt">
         	<ul>
-            	<li><a href="#">
+            	<li><a href="https://zengqiuyun.github.io/kwtt/">
                     <p>
                         <span><b>01</b>/09
                         </span>  
                         <b>什么是咖啡的碳烤?</b>
                     </p>
                 </a></li>
-               <li><a href="#">
+               <li><a href="https://zengqiuyun.github.io/kwtt/">
                     <p>
                         <span><b>14</b>/06
                         </span>  
                         <b>咖啡加盟连锁开店需要注意什么?</b>
                     </p>
                 </a></li>
-                <li><a href="#">
+                <li><a href="https://zengqiuyun.github.io/kwtt/">
                     <p>
                         <span><b>14</b>/06
                         </span>  
                         <b>开咖啡加盟店注意事项</b>
                     </p>
                 </a></li>
-                <li><a href="#">
+                <li><a href="https://zengqiuyun.github.io/kwtt/">
                     <p>
                         <span><b>05</b>/11
                         </span>  
@@ -245,12 +245,12 @@
          <div class="foot_right">
             <h5>快捷导航</h5>
             <ul>
-                <li><a href="#">首页</a></li>
-                <li><a href="#">品牌介绍</a></li>
-                <li><a href="#">产品介绍</a></li>
-                <li><a href="#">招商加盟</a></li>
-                <li><a href="#">卡吻头条</a></li>
-                <li><a href="#">联系我们</a></li>
+                <li><a href="https://zyx230107.github.io/sy/">首页</a></li>
+                <li><a href="https://zhujingle2.github.io/brand/">品牌介绍</a></li>
+                <li><a href="https://zhujingle2.github.io/product-induction/">产品介绍</a></li>
+                <li><a href="https://zengqiuyun.github.io/zsjm/">招商加盟</a></li>
+                <li><a href="https://zengqiuyun.github.io/kwtt/">卡吻头条</a></li>
+                <li><a href="https://zyx230107.github.io/lxwm2/">联系我们</a></li>
             </ul>
          </div>
        </div> 
