--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--导航-->
     <div class="nav">
     	<div class="logo">
-        	<img src="image/logo.png" />
+        	<img src="img/logo.png" />
         </div>
         <ul>
             <li class="active"><a href="https://zyx230107.github.io/sy/">首页</a></li>
@@ -31,10 +31,10 @@
     <!--轮播图-->
     <div class="header">
     	<div id="header_pic" class="header_pic">
-        	<div class="current"><img src="image/header1.jpg" alt="" /></div>
-            <div class="pic"><img src="image/header2.jpg" alt="" /></div>
-            <div class="pic"><img src="image/header3.jpg" alt="" /></div>
-            <div class="pic"><img src="image/header4.jpg" alt="" /></div>
+        	<div class="current"><img src="img/header1.jpg" alt="" /></div>
+            <div class="pic"><img src="img/header2.jpg" alt="" /></div>
+            <div class="pic"><img src="img/header3.jpg" alt="" /></div>
+            <div class="pic"><img src="img/header4.jpg" alt="" /></div>
         </div>
         <ol id="button">
         	<li class="current"></li>
@@ -46,10 +46,10 @@
     <!--关于-->
     <div class="about">
     	<div class="pic1">
-            <img src="image/about2.png" />
+            <img src="img/about2.png" />
         </div>
         <div class="pic2">
-            <img src="image/about1.png" />
+            <img src="img/about1.png" />
         </div>
         <div class="con">
         	<div class="conr">
@@ -73,14 +73,14 @@
         </div>
         <div class="btn">
         	<div class="btn1">
-            	<img src="image/gc1.png" />
+            	<img src="img/gc1.png" />
                 <h2>自有咖啡豆工厂</h2>
                 <p>卡吻拥有的强大和稳定的咖啡豆供<br />
                 应枢纽。高效的生产和系统管理，<br />
                 让生产成本可控及咖啡品质稳定。</p>
             </div>
             <div class="btn2">
-            	<img src="image/yf1.png" />
+            	<img src="img/yf1.png" />
                 <h2>自主研发</h2>
                 <p>拥有独立的产品研发团队，根据市<br />
                 场需要，从香气、酸度、醇厚、苦<br />
@@ -88,7 +88,7 @@
                 费者喜爱的产品。</p>
             </div>
             <div class="btn3">
-            	<img src="image/sb.png" />
+            	<img src="img/sb.png" />
                 <h2>先进设备</h2>
                 <p>配备全球专业烘焙设备PROBAT、<br />
                 GIESEN。自动包装设备、挂耳全<br />
@@ -97,7 +97,7 @@
                 食品卫生安全。</p>
             </div>
             <div class="btn4">
-            	<img src="image/pz.png" />
+            	<img src="img/pz.png" />
                 <h2>大师品质</h2>
                 <p>甄选全球优质咖啡生豆，根据每一<br />
                 款咖啡生豆的产地特性、外部温湿<br />
@@ -116,7 +116,7 @@
         <div id="ad">
         	<div class="aa">
             	<div class="al">
-                	<img src="image/sale1.jpg" />
+                	<img src="img/sale1.jpg" />
                 </div>
                 <div class="text">
                 	<h3>芒个不停</h3>
@@ -125,7 +125,7 @@
             </div>
             <div class="aa">
             	<div class="al">
-                	<img src="image/sale2.jpg" />
+                	<img src="img/sale2.jpg" />
                 </div>
                 <div class="text">
                 	<h3>北海道流心蛋糕</h3>
@@ -134,7 +134,7 @@
             </div>
             <div class="aa">
             	<div class="al">
-                	<img src="image/sale3.jpg" />
+                	<img src="img/sale3.jpg" />
                 </div>
                 <div class="text">
                 	<h3>包草莓肉松小贝</h3>
@@ -143,7 +143,7 @@
             </div>
             <div class="aa">
             	<div class="al">
-                	<img src="image/sale4.jpg" />
+                	<img src="img/sale4.jpg" />
                 </div>
                 <div class="text">
                 	<h3>朗姆提子棒棒</h3>
@@ -152,7 +152,7 @@
             </div>
             <div class="aa">
             	<div class="al">
-                	<img src="image/sale5.jpg" />
+                	<img src="img/sale5.jpg" />
                 </div>
                 <div class="text">
                 	<h3>热姜拿铁</h3>
@@ -161,7 +161,7 @@
             </div>
             <div class="aa">
             	<div class="al">
-                	<img src="image/sale6.jpg" />
+                	<img src="img/sale6.jpg" />
                 </div>
                 <div class="text">
                 	<h3>抹茶红豆小蛋糕</h3>
@@ -170,7 +170,7 @@
             </div>
             <div class="aa">
             	<div class="al">
-                	<img src="image/sale1.jpg" />
+                	<img src="img/sale1.jpg" />
                 </div>
                 <div class="text">
                 	<h3>芒个不停</h3>
@@ -186,7 +186,7 @@
             <div class="more2"><a href="https://zengqiuyun.github.io/kwtt/">more</a></div>
         </div>
         <div class="tp">
-        	<img src="image/news1.png" />
+        	<img src="img/news1.png" />
         </div>
         <div class="tt">
         	<ul>
@@ -220,7 +220,7 @@
                 </a></li>
             </ul>
         </div>
-        <img src="image/news2.png" />
+        <img src="img/news2.png" />
     </div>
     <!--底部-->
     <div class="footer">
@@ -229,15 +229,15 @@
             <h1>Cafvin Coffee</h1>
             <ul>
                 <li>
-                    <img src="image/footer1.png" />
+                    <img src="img/footer1.png" />
                     <p>官方电话<br />400-6803-688</p>
                 </li>
                 <li>
-                    <img src="image/footer2.png" />
+                    <img src="img/footer2.png" />
                     <p>服务监督邮箱<br />cloris@vins.cn</p>
                 </li>
                 <li>
-                    <img src="image/footer3.png" />
+                    <img src="img/footer3.png" />
                     <p>公司地址<br />广州市番禺区天安科技园总部中心一号楼</p>
                 </li>
             </ul>
